# Rust-Prime-Picture-Generator

./: README.md  Rust Installation and Program.docx  Rust Postmortem.docx
prime_cargo/: Cargo.toml
prime_cargo/.criterion/fib 20/new/: estimates.json  sample.json  tukey.json
prime_cargo/.criterion/multi thread complex/base/: estimates.json  sample.json  tukey.json
prime_cargo/.criterion/multi thread complex/change/: estimates.json
prime_cargo/.criterion/multi thread complex/new/: estimates.json  sample.json  tukey.json
prime_cargo/.criterion/multi thread simle/new/: estimates.json  sample.json  tukey.json
prime_cargo/.criterion/multi thread simple/base/: estimates.json  sample.json  tukey.json
prime_cargo/.criterion/multi thread simple/change/: estimates.json
prime_cargo/.criterion/multi thread simple/new/: estimates.json  sample.json  tukey.json
prime_cargo/.criterion/multi thread/new/: estimates.json  sample.json  tukey.json
prime_cargo/.criterion/single thread complex/base/: estimates.json  sample.json  tukey.json
prime_cargo/.criterion/single thread complex/change/: estimates.json
prime_cargo/.criterion/single thread complex/new/: estimates.json  sample.json  tukey.json
prime_cargo/.criterion/single thread simple/base/: estimates.json  sample.json  tukey.json
prime_cargo/.criterion/single thread simple/change/: estimates.json
prime_cargo/.criterion/single thread simple/new/: estimates.json  sample.json  tukey.json
prime_cargo/.criterion/single thread/new/: estimates.json  (+2 more)
prime_cargo/benches/: my_benchmark.rs
prime_cargo/src/: main.rs
