[package]
name = "main"
version = "0.1.0"
authors = ["drewr"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.1.3"
structopt-derive = "0.1.0"
libmath = "0.2.1"
rayon = "1.3.0"
criterion = "0.1.2"
num_cpus = "1.0"

[[bench]]
name = "my_benchmark"
harness = false